fixed padding on mobile

--- a/src/components/comment/_comment.scss
+++ b/src/components/comment/_comment.scss
@@ -17,7 +17,7 @@
     max-width: 100%;
     height: auto;
     margin: 0rem;
-    padding: 1rem 0;
+    padding: 1rem 1rem;
     border-bottom: 1px solid $mercury;
 
     @include tablet {
@@ -37,6 +37,7 @@
     &-numbers {
         font-family: "Avenir-Bold";
 
+        padding: 0 1rem;
         @include tablet {
             padding-top: 1.5rem;
         }
