--- a/src/components/commentSection/_comments-section.scss
+++ b/src/components/commentSection/_comments-section.scss
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    padding: 1rem 0rem;
+    padding: 1rem 1rem;
     border-bottom: 1px solid $mercury;
     line-height: 1.25rem;
     margin: 0;
