--- a/src/components/video-description/_description.scss
+++ b/src/components/video-description/_description.scss
@@ -5,6 +5,7 @@
 
 
 .video-description {
+    padding: 0 1rem;
     font-size: 0.8125rem;
 
     @include tablet {
