--- a/src/components/video-list/_video-list.scss
+++ b/src/components/video-list/_video-list.scss
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     width: 100%;
     margin: 0;
+    padding: 0 1rem;
 
     @include desktop {
         padding-left: 1.5rem;
