--- a/src/components/video-stats/_vidstats.scss
+++ b/src/components/video-stats/_vidstats.scss
@@ -5,7 +5,7 @@
 
 
 .vid-stats-section {
-
+    padding: 0 1rem;
     @include desktop {
         width: 100%;
         padding-top: 1rem;
